faq added BookingApp13

--- a/BookingApp/templates/bookingpage/faq.html
+++ b/BookingApp/templates/bookingpage/faq.html
@@ -43,9 +43,9 @@
 </div>
 
 <div>
-  <input type="checkbox" id="question2" name="q" class="questions">
+  <input type="checkbox" id="question4" name="q" class="questions">
   <div class="plus">+</div>
-  <label for="question2" class="question">
+  <label for="question4" class="question">
     Do you charge any fees for your services?
   </label>
   <div class="answers">
@@ -54,62 +54,70 @@
 </div>
 
 <div>
-  <input type="checkbox" id="question2" name="q" class="questions">
+  <input type="checkbox" id="question5" name="q" class="questions">
   <div class="plus">+</div>
-  <label for="question2" class="question">
+  <label for="question5" class="question">
     Are the rates on your web site per person or per room?
   </label>
   <div class="answers">
     The price is always per room, the only exception are dorm beds in hostels.
   </div>
 </div>
+
 <div>
-  <input type="checkbox" id="question2" name="q" class="questions">
+  <input type="checkbox" id="question6" name="q" class="questions">
   <div class="plus">+</div>
-  <label for="question2" class="question">
+  <label for="question6" class="question">
     Are fees and taxes included in prices?
   </label>
   <div class="answers">
     This is different for each country and also any type of accommodation. For this information, please always check the room conditions by clicking on the name of the room you are interested in.
   </div>
 </div>
+
 <div>
-  <input type="checkbox" id="question2" name="q" class="questions">
+  <input type="checkbox" id="question7" name="q" class="questions">
   <div class="plus">+</div>
-  <label for="question2" class="question">
+  <label for="question7" class="question">
     How do I know that my reservation is confirmed?
   </label>
   <div class="answers">
     After completing and sending us your order form, you will get an automatic receipt e-mail containing your order number. Within 30 minutes, you will receive Accommodation confirmation. The Accommodation confirmation serves you as a voucher so please do not forget to print it out and take it with you as it contains all the vital details (address of your hotel, contact phone numbers and other instructions). In case that you requested in your order form any special requests – ie. extra bed, non smoking room, parking etc, please always double check with the hotel directly that they noted your request and are able to arrange it for you.
   </div>
 </div>
+
 <div>
-  <input type="checkbox" id="question2" name="q" class="questions">
+  <input type="checkbox" id="question8" name="q" class="questions">
   <div class="plus">+</div>
-  <label for="question2" class="question">
+  <label for="question8" class="question">
     Can I book your services by telephone, e-mail or fax?
   </label>
   <div class="answers">
     Unfortunately not. If you wish to make a booking, please fill in the order form on our website.
   </div>
 </div>
+
 <div>
-  <input type="checkbox" id="question2" name="q" class="questions">
+  <input type="checkbox" id="question9" name="q" class="questions">
   <div class="plus">+</div>
-  <label for="question2" class="question">
+  <label for="question9" class="question">
     I made a reservation but did not receive any confirmation. What should I do?
   </label>
   <div class="answers">
     Before finalizing your reservation please double check your e-mail address because a mistake in the e-mail address is the most common reason why our clients do not receive their confirmations. In some cases, our e-mails can also end up in the “spam folder” so please check it as well. In any case, please try to contact us by e-mail as we will be very happy to assist you and solve the problem as soon as possible.
   </div>
 </div>
+
 <div>
-  <input type="checkbox" id="question2" name="q" class="questions">
+  <input type="checkbox" id="question10" name="q" class="questions">
   <div class="plus">+</div>
-  <label for="question2" class="question">
+  <label for="question10" class="question">
     How many rooms can I book at once?
   </label>
   <div class="answers">
    You can book as many rooms as are available for selected period.
   </div>
+</div>
+
+
 </div>
