--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -31,25 +31,36 @@
        <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
        <!-- NAVIGATION MENUS -->
        <div class="menu">
-         <li><a href="/booking/home1/">Home</a></li>
-         <li><a href="/">About</a></li>
+         <li><a href="/" class="text-decoration-none">Home</a></li>
+         
          <li class="services">
-           <a href="/">Services</a>
+           <a href="/" class="text-decoration-none">Services</a>
            <!-- DROPDOWN MENU -->
            
          </li>
-         <li><a href="/">Hotel list</a></li>
-         <li><a href="/booking/contact/">Contact</a></li>
+         <li><a href="/listproperty/" class="text-decoration-none">Hotel List</a></li>
+         <li><a href="/" class="text-decoration-none">Why Us</a></li>
+         <li><a href="/booking/contact/" class="text-decoration-none">Contact</a></li>
+         {% if user.is_staff %}
+           <li><a href="/adminuser/" class="text-decoration-none">Admin Dashboard</a></li>
+         {% endif %}
+         {% if user.username %}
+          <li><a href="" class="text-decoration-none">{{user.username}}</a></li>
+           <li><a href="/accounts/logout/" class="text-decoration-none">Signout</a></li>
+          {% else %}
+          <li><a href="/accounts/login/" class="text-decoration-none">Signin</a></li>
+         {% endif %}
        </div>
      </ul>
    </nav>
  </div>
- 
+
   
-   {% include 'home/img_slider.html' %}
+  
    {% comment %} 
    {% include 'bookingpage/recommended.html' %}
     {% endcomment %}
+   
     {% block content %}
  
    {% endblock %}
