--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -1,10 +1,11 @@
 {% include 'base.html' %} {% block content %}
-<h1 class="text-center">List The Property</h1>
+<h3 class="text-center mt-4">List The Property</h3>
 <hr />
-<div class="container justify-content-center mt-4">
+<div class="container justify-content-center mt-4 mb-4">
   <div class="row">
     {% for property in properties %}
     <div class="card me-2 mt-4" style="width: 12rem">
+    <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
     <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
       <div class="card-body">
         <p class="card-text text-danger" style="font-size: 0.6rem">
@@ -15,10 +16,13 @@
         <p class="card-text" style="font-size: 0.6rem">
           R${{property.cost}} Per Night
         </p>
+       
+      
       </div>
+      </a>
     </div>
     {% endfor %}
   </div>
 </div>
-
+{% include 'home/footer.html' %}
 {% endblock %}
