--- a/RealEstateApp/templates/property/most_viewed_property.html
+++ b/RealEstateApp/templates/property/most_viewed_property.html
@@ -1,9 +1,12 @@
 
-<hr />
+
 <div class="container justify-content-center mt-4">
   <div class="row">
+  <a class="d-flex float-right text-decoration-none" href="/mostviewedproperties/" >See All></a>
     {% for property in properties %}
+   
     <div class="card me-2 mt-4" style="width: 12rem">
+    <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.property.slug %}" >
     <img src="{% if property.property.image %}{{ property.property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
       <div class="card-body">
         <p class="card-text text-danger" style="font-size: 0.6rem">
@@ -14,11 +17,11 @@
         <p class="card-text" style="font-size: 0.6rem">
           R${{property.property.cost}} Per Night
         </p>
+   
       </div>
+       </a>
     </div>
-    {% if forloop.counter == 4 %}
-       <a class="d-flex" href="/mostviewedproperties/" >Read More...</a>
-    {% endif %}
+   
     {% endfor %}
   </div>
 </div>
