--- a/AdminUser/templates/admin/roles/delete_admin_user_roles.html
+++ b/AdminUser/templates/admin/roles/delete_admin_user_roles.html
@@ -16,7 +16,7 @@
       
         <div>
             <button type="submit" class="btn btn-success">Submit</button>
-            <a href="{% url 'home' %}" class="btn btn-default">Cancel</a>
+            <a href="{% url 'admin_user:manage_admin_role' %}" class="btn btn-default">Cancel</a>
         </div>
     </form>
 </div>
