--- a/RealEstateApp/templates/property/create_property.html
+++ b/RealEstateApp/templates/property/create_property.html
@@ -85,7 +85,7 @@
   <button type="submit" class="btn btn-primary mt-2 mb-2">Submit</button>
 </form>
 </div>
-
+{% include 'home/footer.html' %} 
 
  <script>
   document.querySelectorAll(".drop-zone__input").forEach((inputElement) => {
