--- a/RealEstateApp/templates/property/property_update.html
+++ b/RealEstateApp/templates/property/property_update.html
@@ -64,7 +64,7 @@
 <body>
 
 
-<h1 class="text-center">Add The Property</h1>
+<h1 class="text-center">Update The Property</h1>
 <hr />
 <div class="container col-sm-6">
 <form method="post" enctype="multipart/form-data">
@@ -86,7 +86,7 @@
 </form>
 </div>
 
-
+{% include 'home/footer.html' %} 
  <script>
   document.querySelectorAll(".drop-zone__input").forEach((inputElement) => {
   const dropZoneElement = inputElement.closest(".drop-zone");
