--- a/BookingApp/templates/booking/create_booking.html
+++ b/BookingApp/templates/booking/create_booking.html
@@ -18,4 +18,5 @@
   <button type="submit" class="btn btn-primary mt-2 mb-2">Submit</button>
 </form>
 </div>
+{% include 'home/footer.html' %} 
 {% endblock %}
