--- a/RealEstateApp/templates/home/img_slider.html
+++ b/RealEstateApp/templates/home/img_slider.html
@@ -1,10 +1,10 @@
 {% load static %}
 
-<div class="slideshow-container" style="width:">
+<div class="slideshow-container" style="">
   {% for property in properties %}
 <div class="mySlides fade">
   <img src="{% if property.property.image %}{{property.property.image.url}}{% endif %}" style="width:100%">
-  <div class="text">Caption Text</div>
+  
 </div>
 {% endfor %}
 
