contact and why_us page added and also footer,navbar Bookingapp

--- a/BookingApp/templates/create_booking.html
+++ b/BookingApp/templates/create_booking.html
@@ -1,5 +1,4 @@
-
-{% extends 'bookingpage/base.html'%}
+{% extends 'base.html'%}
 {% load static %}
 {% block content %}
 <h1>Add The Booking</h1>
@@ -11,3 +10,4 @@
 </form>
 </div>
 {% endblock %}
+{% include 'home/footer.html' %}
