--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -32,14 +32,10 @@
        <!-- NAVIGATION MENUS -->
        <div class="menu">
          <li><a href="/" class="text-decoration-none">Home</a></li>
-         
-         <li class="services">
-           <a href="/" class="text-decoration-none">Services</a>
-           <!-- DROPDOWN MENU -->
-           
+           <!-- DROPDOWN MENU -->  
          </li>
          <li><a href="/listproperty/" class="text-decoration-none">Hotel List</a></li>
-         <li><a href="/" class="text-decoration-none">Why Us</a></li>
+         <li><a href="/booking/why_us" class="text-decoration-none">Why Us</a></li>
          <li><a href="/booking/contact/" class="text-decoration-none">Contact</a></li>
          {% if user.is_staff %}
            <li><a href="/adminuser/" class="text-decoration-none">Admin Dashboard</a></li>
