--- a/BookingApp/templates/bookingpage/base.html
+++ b/BookingApp/templates/bookingpage/base.html
@@ -44,7 +44,7 @@
     
   </head>
   <body>
-      {% include 'bookingpage/navbar.html %}
+      {% include 'bookingpage/navbar.html' %}
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">
