--- a/BookingApp/templates/bookingpage/why_us.html
+++ b/BookingApp/templates/bookingpage/why_us.html
@@ -1,3 +1,4 @@
+{% include 'base.html' %}
 {% load static %}
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -111,3 +112,4 @@
     </div>
   </div>
 </div>
+{% include 'home/footer.html' %}
