--- a/AdminUser/templates/admin/adminPanel.html
+++ b/AdminUser/templates/admin/adminPanel.html
@@ -8,6 +8,11 @@
           >Dashboard</a
         >
       </li>
+       <li class="list-group-item">
+        <a class="text-decoration-none" href="{% url 'admin_user:approving_property_list' %}"
+          >Approved Property</a
+        >
+      </li>
       <li class="list-group-item">
         <a
           class="text-decoration-none"
