--- a/RealEstateApp/templates/property/property_update.html
+++ b/RealEstateApp/templates/property/property_update.html
@@ -71,7 +71,11 @@
   {% csrf_token %}
   {% for field in form.visible_fields %}
   <div class="form-group mt-1">
-    {% render_field field class="form-control" placeholder=field.label %}
+   <label class="fw-bold" for="{{ field.id_for_label }}">{{ field.label }}</label> 
+      {% comment %} {{ field|add_class:'form-control' | }} {% endcomment %}
+      {{ field|append_attr:"class:form-control"|append_attr:"placeholder:field.label" }} 
+    
+    {% comment %} {% render_field field class="form-control" placeholder=field.label %} {% endcomment %}
     {% for error in field.errors %}
       <span class="help-block">{{ error }}</span>
     {% endfor %}
