--- a/RealEstateApp/templates/home/footer.html
+++ b/RealEstateApp/templates/home/footer.html
@@ -17,7 +17,7 @@
                             <i class="fas fa-phone"></i>
                             <div class="cta-text">
                                 <h4>Call us</h4>
-                                <span>000000000 0</span>
+                                <span>18004254354</span>
                             </div>
                         </div>
                     </div>
@@ -26,7 +26,7 @@
                             <i class="far fa-envelope-open"></i>
                             <div class="cta-text">
                                 <h4>Mail us</h4>
-                                <span>mail@info.com</span>
+                                <span>webkrone@info.com</span>
                             </div>
                         </div>
                     </div>
@@ -56,16 +56,16 @@
                                 <h3>Useful Links</h3>
                             </div>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">about</a></li>
+                                <li><a href="http://127.0.0.1:8000/">Home</a></li>
+                                <li><a href="/booking/why_us/">Why Us</a></li>
                                 <li><a href="#">services</a></li>
-                                <li><a href="#">portfolio</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="/listproperty/">Hotel List</a></li>
+                                <li><a href="/booking/contact/">Contact</a></li>
+                                <!-- <li><a href="#">About us</a></li> -->
                                 <li><a href="#">Our Services</a></li>
-                                <li><a href="#">Expert Team</a></li>
-                                <li><a href="#">Contact us</a></li>
-                                <li><a href="#">Latest News</a></li>
+                                <li><a href="/booking/faq/">FAQ</a></li>
+                                <li><a href="/booking/contact/">Contact us</a></li>
+                                <li><a href="https://timesofindia.indiatimes.com/">Latest News</a></li>
                             </ul>
                         </div>
                     </div>
