--- a/RealEstateApp/templates/booking/booking_table.html
+++ b/RealEstateApp/templates/booking/booking_table.html
@@ -30,7 +30,7 @@
                                       </div>
                                       <div class="form-row clearfix pl-2 pr-2 tm-fx-col-xs " style="margin-bottom : -50px">
                                           <p style="color:red" class="tm-margin">Hotel booking.</p>
-                                          <a href="#" class="ie-10-ml-auto ml-auto mt-1 tm-font-semibold tm-color-primary">Need Help?</a>
+                                          <a href="/booking/faq/" class="ie-10-ml-auto ml-auto mt-1 tm-font-semibold tm-color-primary">Need Help?</a>
                                       </div>
                                 </form>
                             </div>                        
