--- a/RealEstateApp/templates/property/most_viewed_property.html
+++ b/RealEstateApp/templates/property/most_viewed_property.html
@@ -20,6 +20,9 @@
    
       </div>
        </a>
+        <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' %}" >
+        Book
+        </a>
     </div>
    
     {% endfor %}
