--- a/RealEstateApp/templates/property/property_detail.html
+++ b/RealEstateApp/templates/property/property_detail.html
@@ -52,6 +52,9 @@
     <div class="card">
     Booking Details-</br>
     <p>cost :<span id="cost"> </span></p>
+    <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' %}" >
+        Book
+        </a>
     </div>
     </div>
     </div>
