Implemented why-us-page

--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -41,7 +41,7 @@
          
          <li><a href="/listproperty/" class="text-decoration-none">Hotel List</a></li>
          
-         <li><a href="/" class="text-decoration-none">Why Us</a></li>
+         <li><a href="/booking/why_us/" class="text-decoration-none">Why Us</a></li>
          <li><a href="/booking/contact/" class="text-decoration-none">Contact</a></li>
          {% if user.is_staff %}
            <li><a href="/adminuser/" class="text-decoration-none">Admin Dashboard</a></li>
