--- a/RealEstateApp/templates/home.html
+++ b/RealEstateApp/templates/home.html
@@ -7,6 +7,7 @@
             <div class="col-12">
                 <h2 class="mb-3 text-danger">Most Viewed </h2>
                  {% include 'property/most_viewed_property.html' %}
+                 {% include 'propertyrank.html' %}
             </div>
           </div>
         </div>
