--- a/RealEstateApp/templates/home/img_slider.html
+++ b/RealEstateApp/templates/home/img_slider.html
@@ -4,10 +4,9 @@
   {% for property in properties %}
 <div class="mySlides fade">
   <img src="{% if property.property.image %}{{property.property.image.url}}{% endif %}" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="text"></div>
 </div>
 {% endfor %}
-
 
 </div>
 <br>
