--- a/RealEstateApp/templates/booking/booking_table.html
+++ b/RealEstateApp/templates/booking/booking_table.html
@@ -1,6 +1,6 @@
 {% load static %}
-            <div class="tm-section tm-bg-img" id="tm-section-1">
-                <div class="tm-bg-white ie-container-width-fix-2">
+            <!-- <div class="tm-section tm-bg-img" id="tm-section-1">
+                <div class="tm-bg-white ie-container-width-fix-2"> -->
                     <div class="container ie-h-align-center-fix">
                         <div class="row">
                             <div class="col-xs-12 ml-auto mr-auto ie-container-width-fix">
@@ -36,9 +36,9 @@
                             </div>                        
                         </div>      
                     </div>
-                </div>                  
+              <!--   </div>                  
             </div>
-            
+             -->
             
             
             
