Included link in footer

--- a/RealEstateApp/templates/home/footer.html
+++ b/RealEstateApp/templates/home/footer.html
@@ -37,7 +37,7 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="/static/images/webkrone_logo.png"  class="img-fluid" alt="logo"></a>
+                                <a href="/"><img src="/static/images/webkrone_logo.png"  class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>.</p>
@@ -56,15 +56,12 @@
                                 <h3>Useful Links</h3>
                             </div>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">about</a></li>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="/booking/why_us/">About Us</a></li>
                                 <li><a href="#">services</a></li>
                                 <li><a href="#">portfolio</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Our Services</a></li>
+                                <li><a href="/booking/contact/">Contact Us</a></li>
                                 <li><a href="#">Expert Team</a></li>
-                                <li><a href="#">Contact us</a></li>
                                 <li><a href="#">Latest News</a></li>
                             </ul>
                         </div>
