--- a/RealEstateApp/static/css/navbar.css
+++ b/RealEstateApp/static/css/navbar.css
@@ -1,4 +1,3 @@
-/* UTILITIES */
 * {
     margin: 0;
     padding: 0;
@@ -23,7 +22,7 @@ li {
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    background-color: teal;
+    background-color: rgb(128, 0, 4);
     color: #fff;
 }
 
