--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -33,11 +33,11 @@
        <div class="menu">
          <li><a href="/" class="text-decoration-none">Home</a></li>
          
-         <li class="services">
+         {% comment %} <li class="services">
            <a href="/" class="text-decoration-none">Services</a>
            <!-- DROPDOWN MENU -->
            
-         </li>
+         </li> {% endcomment %}
          
          <li><a href="/listproperty/" class="text-decoration-none">Hotel List</a></li>
          
@@ -57,7 +57,6 @@
    </nav>
  </div>
 
-  
   
    {% comment %} 
    {% include 'bookingpage/recommended.html' %}
