--- a/RealEstateApp/templates/booking/booking_table.html
+++ b/RealEstateApp/templates/booking/booking_table.html
@@ -1,44 +1,41 @@
 {% load static %}
-            <div class="tm-section tm-bg-img" id="tm-section-1">
-                <div class="tm-bg-white ie-container-width-fix-2">
-                    <div class="container ie-h-align-center-fix">
-                        <div class="row">
-                            <div class="col-xs-12 ml-auto mr-auto ie-container-width-fix">
-                                <form action="/searchproperty/" class="tm-search-form tm-section-pad-2">
-                                    <div class="form-row tm-search-form-row">
-                                        <div class="form-group tm-form-element tm-form-element-50">
-                                            <!-- <i class="fa fa-calendar fa-1x tm-form-element-icon"></i> -->
-                                            <input name="city" type="text" class="form-control" id="inputCheckIn" placeholder="     City">
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-100">
-                                            <!-- <i class="fa fa-map-marker fa-1x tm-form-element-icon"></i> -->
-                                            <input name="street" type="text" class="form-control" id="inputCity" placeholder="    Street">
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-50">
-                                            <!-- <i class="fa fa-calendar fa-1x tm-form-element-icon"></i> -->
-                                            <input name="checkintime" type="date" class="form-control" id="inputCheckIn" placeholder="     Check In">
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-50">
-                                            <!-- <i class="fa fa-calendar fa-1x tm-form-element-icon"></i> -->
-                                            <input name="checkouttime" type="date" class="form-control" id="inputCheckOut" placeholder="      Check Out">
-                                        </div>
-                                    
-                                           
-                                        <div class="form-group tm-form-element tm-form-element-2">
-                                            <button type="submit" class="btn btn-primary tm-btn-search">Check Availability</button>
-                                        </div>
-                                      </div>
-                                      <div class="form-row clearfix pl-2 pr-2 tm-fx-col-xs " style="margin-bottom : -50px">
-                                          <p style="color:red" class="tm-margin">Hotel booking.</p>
-                                          <a href="#" class="ie-10-ml-auto ml-auto mt-1 tm-font-semibold tm-color-primary">Need Help?</a>
-                                      </div>
-                                </form>
-                            </div>                        
-                        </div>      
-                    </div>
-                </div>                  
-            </div>
             
+<div class="container ie-h-align-center-fix">
+    <div class="row">
+        <div class="col-xs-12 ml-auto mr-auto ie-container-width-fix">
+            <form action="/searchproperty/" class="tm-search-form tm-section-pad-2">
+                <div class="form-row tm-search-form-row">
+                    <div class="form-group tm-form-element tm-form-element-50">
+                        <!-- <i class="fa fa-calendar fa-1x tm-form-element-icon"></i> -->
+                        <input name="city" type="text" class="form-control" id="inputCheckIn" placeholder="     City">
+                    </div>
+                    <div class="form-group tm-form-element tm-form-element-100">
+                        <!-- <i class="fa fa-map-marker fa-1x tm-form-element-icon"></i> -->
+                        <input name="street" type="text" class="form-control" id="inputCity" placeholder="    Street">
+                    </div>
+                    <div class="form-group tm-form-element tm-form-element-50">
+                        <!-- <i class="fa fa-calendar fa-1x tm-form-element-icon"></i> -->
+                        <input name="checkintime" type="date" class="form-control" id="inputCheckIn" placeholder="     Check In">
+                    </div>
+                    <div class="form-group tm-form-element tm-form-element-50">
+                        <!-- <i class="fa fa-calendar fa-1x tm-form-element-icon"></i> -->
+                        <input name="checkouttime" type="date" class="form-control" id="inputCheckOut" placeholder="      Check Out">
+                    </div>
+                
+                        
+                    <div class="form-group tm-form-element tm-form-element-2">
+                        <button type="submit" class="btn btn-primary tm-btn-search">Check Availability</button>
+                    </div>
+                    </div>
+                    <div class="form-row clearfix pl-2 pr-2 tm-fx-col-xs " style="margin-bottom : -50px">
+                        <a href="/booking/faq/" class="ie-10-ml-auto ml-auto mt-1 tm-font-semibold tm-color-primary">Need Help?</a>
+                    </div>
+            </form>
+        </div>                        
+    </div>      
+</div>
+
+
             
             
             
