--- a/RealEstateApp/templates/feedback/create_feedback_property.html
+++ b/RealEstateApp/templates/feedback/create_feedback_property.html
@@ -1,5 +1,5 @@
 {% include 'base.html' %}{% load widget_tweaks %} {% block content %}
-<h1 class="text-center">Add The Booking</h1>
+<h1 class="text-center">Write feedback</h1>
 <hr/>
 <div class="container col-sm-6">
 <form method="post">
