--- a/BookingApp/templates/booking/create_booking.html
+++ b/BookingApp/templates/booking/create_booking.html
@@ -6,10 +6,10 @@
   {% csrf_token %} 
    {% for field in form.visible_fields %}
   <div class="form-group mt-1">
-     <label class="fw-bold" for="{{ field.id_for_label }}">{{ field.label }}</label> 
+    {% comment %} <label for="{{ field.id_for_label }}">{{ field.label }}</label> {% endcomment %}
      {% comment %} {{ field|add_class:'form-control' | }} {% endcomment %}
-     {{ field|append_attr:"class:form-control"|append_attr:"placeholder:field.label" }} 
-    {% comment %} {% render_field field class="form-control" placeholder=field.label %} {% endcomment %}
+     {% comment %} {{ field|append_attr:"class:form-control"|append_attr:"placeholder:field.label" }} {% endcomment %}
+    {% render_field field class="form-control" placeholder=field.label %}
     {% for error in field.errors %}
       <span class="help-block">{{ error }}</span>
     {% endfor %}
@@ -18,4 +18,5 @@
   <button type="submit" class="btn btn-primary mt-2 mb-2">Submit</button>
 </form>
 </div>
+{% include 'home/footer.html' %} 
 {% endblock %}
