--- a/RealEstateApp/templates/property/property_update.html
+++ b/RealEstateApp/templates/property/property_update.html
@@ -64,14 +64,18 @@
 <body>
 
 
-<h1 class="text-center">Add The Property</h1>
+<h1 class="text-center">Update The Property</h1>
 <hr />
 <div class="container col-sm-6">
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {% for field in form.visible_fields %}
   <div class="form-group mt-1">
-    {% render_field field class="form-control" placeholder=field.label %}
+   <label class="fw-bold" for="{{ field.id_for_label }}">{{ field.label }}</label> 
+      {% comment %} {{ field|add_class:'form-control' | }} {% endcomment %}
+      {{ field|append_attr:"class:form-control"|append_attr:"placeholder:field.label" }} 
+    
+    {% comment %} {% render_field field class="form-control" placeholder=field.label %} {% endcomment %}
     {% for error in field.errors %}
       <span class="help-block">{{ error }}</span>
     {% endfor %}
@@ -86,7 +90,7 @@
 </form>
 </div>
 
-
+{% include 'home/footer.html' %} 
  <script>
   document.querySelectorAll(".drop-zone__input").forEach((inputElement) => {
   const dropZoneElement = inputElement.closest(".drop-zone");
