--- a/RealEstateApp/templates/property/property_detail.html
+++ b/RealEstateApp/templates/property/property_detail.html
@@ -1,12 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-    <img class="" style="height:550px;width:100%;" src="{% if property.image %}{{ property.image.url }}{% endif %}">
-   
-
-
-   <hr>
+<div class="container-fluid">
+ <div class="row">
+ <div class="col-sm-7">
+    <img class="" style="height:550px;width:103%;" src="{% if property.image %}{{ property.image.url }}{% endif %}">
+   </div>
+   <div class="col-sm-5">
+   {% for image in images %}
+   {% if forloop.counter == 1 %}
+    <div class="row">
+      
+    <img class="" style="height:276px;width:100%;" src="{% if image.image %}{{ image.image.url }}{% endif %}">
+    
+    </div>
+    
+    {% elif forloop.counter == 2 %}
+   <div class="row">
+   <div class="col-sm-6">
+   <img class="" style="height:272px;width:108%;" src="{% if image.image %}{{ image.image.url }}{% endif %}">
+  
+   </div>
+   {% elif forloop.counter == 3 %}
+    <div class="col-sm-6">
+   <img class="" style="height:272px;width:100%;" src="{% if image.image %}{{ image.image.url }}{% endif %}">
+  
+   </div>
+   </div>
+   {% else %}
+    {% endif %}
+{% endfor %}
+</div>
+  </div>
   <div class="container mt-4">
   <h3>{{property.property_name}}</h3>  
   
