--- a/payment/templates/payment/canceled.html
+++ b/payment/templates/payment/canceled.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="container card mt-4 d-flex align-items-center">
  <h1>Your payment has not been processed</h1>
  <p>There was a problem processing your payment.</p>
+ </div>
 {% endblock %}
