--- a/payment/templates/payment/done.html
+++ b/payment/templates/payment/done.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="container card mt-4 d-flex align-items-center">
  <h1>Your payment was successful</h1>
  <p>Your payment has been successfully received.</p>
+ </div>
 {% endblock %}
