--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Pay using PayPal{% endblock %}
 {% block content %}
+<div class="container card mt-4 d-flex align-items-center">
  <h1>Pay using PayPal</h1>
  {{ form.render }}
+ </div>
 {% endblock %}
