property_details html css file modified

--- a/RealEstateApp/templates/property/property_detail.html
+++ b/RealEstateApp/templates/property/property_detail.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <img class="" style="height:550px;width:100%;" src="{% if property.image %}{{ property.image.url }}{% endif %}">
+    <img class="property_img" src="{% if property.image %}{{ property.image.url }}{% endif %}">
    
   <div class="container mt-4">
-  <h3>{{property.property_name}}</h3>  
+  <p id="property">{{property.property_name}}</p>  
+  <hr style="width: 15%;">
   <div class="row align-items-start mb-b">
     <div class="col-md-7">
     <div class="row">
@@ -20,13 +21,14 @@
       {% endif %}
       </div>
     </div>
-            <h5>Abbout this Listing</h5>
+            <h5>About this Listing</h5>
             <p>{{property.Description}}</p>
     </div>
     <div class="col-5 ">
      {% if property.author == user %}
-       <a class="btn btn-outline float-left" href="{% url 'realestateapp:Update_property' slug=property.slug %}">Update</a>
-       <a class="btn btn-outline float-right" href="{% url 'realestateapp:delete_property' slug=property.slug %}">Delete</a>
+       <a class="btn btn-outline float-left" href="{% url 'realestateapp:Update_property' slug=property.slug %}"><button class="btn btn-outline-primary">Update</button></a>
+       <a class="btn btn-outline float-right" href="{% url 'realestateapp:delete_property' slug=property.slug %}"><button class="btn btn-outline-danger">Delete</button></a>
+       <br>
        <br>
        <hr>
        {% endif %}
@@ -72,7 +74,7 @@
   </div>
 
 </div>
-<hr>
+
 {% include 'home/footer.html' %}
 <script >
 function showDiv() {
