push all my code BookingApp27

--- a/RealEstateApp/templates/home.html
+++ b/RealEstateApp/templates/home.html
@@ -2,7 +2,7 @@
  {% include 'home/img_slider.html' %}
  
  {% include 'booking/booking_table.html' %}
- <div class="text-right" style="margin: 60px; width: 80%;" > <a href="{% url 'realestateapp:create_property' %}"><button class="btn btn-outline-primary">Add Hotels</button></a></div>
+ <div class="text-right" style="margin: 60px; width: 80%; " > <a href="{% url 'realestateapp:create_property' %}"><button class="btn btn-success">Add Hotels</button></a></div>
  
   <section class="bg-light py-4 my-5">
     <div class="container">
