--- a/BookingApp/static/css/img_slider1.css
+++ b/BookingApp/static/css/img_slider1.css
@@ -1,18 +1,22 @@
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
-img {vertical-align: middle;}
+img {
+  vertical-align: middle;
+  width: 100%;
+  height: 500px;
+}
 
-/* Slideshow container */
-/*.slideshow-container {
+ /*Slideshow container */
+.slideshow-container {
   max-width: 1900px;
   position: relative;
   margin: auto;
-}*/
+}
 
 
 
-/* Caption text */
+/* Caption text 
 .text {
   color: #f2f2f2;
   font-size: 15px;
