--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -6,10 +6,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="stylesheet" href="{% static 'css/navbar1.css' %}"/>
-   <link rel="stylesheet" href="{% static 'css/img_slider.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/img_slider1.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/booking_table.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/footer.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/recommended.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/property_details.css' %}"/>
    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
