Added button of add property below search fields in home page

--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -28,7 +28,7 @@
   <div>
    <nav class="navbar">
      <!-- LOGO -->
-     <div class="logo">Hotel Booking</div>
+     <div class="logo"><a href="/" style="color: #fff;font-family: cursive;text-decoration: none;">Hotel Booking</a></div>
      <!-- NAVIGATION MENU -->
      <ul class="nav-links">
        <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
