--- a/AccountUser/templates/registration/create_admin_register_user.html
+++ b/AccountUser/templates/registration/create_admin_register_user.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% load widget_tweaks %} {% block title %} Create an
-account {% endblock %} {% block content %}
+{% extends 'admin/adminHome.html' %}  {% load widget_tweaks %} {% block title %} Create an
+account {% endblock %}{% block Dashboard %}
 <div class="col-sm-4 offset-sm-4">
   <form
     method="post"
