--- a/AccountUser/templates/user/update_user_profile.html
+++ b/AccountUser/templates/user/update_user_profile.html
@@ -64,7 +64,7 @@
 <body>
 
 
-<h1 class="text-center">Add The Property</h1>
+<h1 class="text-center">Edit Profile</h1>
 <hr />
 <div class="container col-sm-6">
 <form method="post" enctype="multipart/form-data">
